<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewContactActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/name_txt" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text" />
    <TextView
        android:id="@+id/phone_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/phone_txt" />

    <EditText
        android:id="@+id/phone_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text" />

    <Button
        android:id="@+id/Add_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_txt"
        android:onClick="AddContact"/>

</LinearLayout>