<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewMessageActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/receiver_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/receiver_txt" />

    <EditText
        android:id="@+id/receiver_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/content_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/content_txt" />

    <EditText
        android:id="@+id/content_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/send_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="Send"
        android:text="@string/send_txt" />

</LinearLayout>